# Haze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Haze/include/: Haze.hpp  Shaderboy.hpp
Haze/include/Audio/: Audio.hpp  AudioListener.hpp  Wave.hpp  dr_wav.hpp
Haze/include/Core/: EntitySystem.hpp  Game.hpp  Input.hpp  InputData.hpp  InputState.hpp  Window.hpp
Haze/include/Graphics/: Camera.hpp  Graphics.hpp  GraphicsConfiguration.hpp  Window.hpp
Haze/include/LearnOpenGL/: camera.h  filesystem.h  mesh.h  model.h  shader.h
Haze/include/Physics/: Physics.hpp
Haze/shader/: fragment.glsl  screen_fragment.glsl  screen_vertex.glsl  vertex.glsl
Haze/shader/0.test/: fragment.glsl  geometry.glsl  screen_fragment.glsl  vertex.glsl
Haze/shader/1.vertex and fragment/: geometry.glsl  vertex.glsl
Haze/shader/2.normals and uvs/: fragment.glsl
Haze/shader/3.textures/: fragment.glsl  screen_fragment.glsl  vertex.glsl
Haze/shader/4.dir light/: fragment.glsl  vertex.glsl
Haze/shader/5.dir and point light/: fragment.glsl
Haze/shader/6.toon shading/: fragment.glsl  screen_fragment.glsl
Haze/shader/7.geometry/: fragment.glsl  geometry.glsl  vertex.glsl
Haze/src/: Haze.cpp  Main.cpp  Shaderboy.cpp  main.cpp
Haze/src/Audio/: Audio.cpp  Wave.cpp  dr_wav.cpp
Haze/src/Core/: Game.cpp  Input.cpp  InputData.cpp  Window.cpp
Haze/src/Graphics/: Graphics.cpp  GraphicsConfiguration.cpp  Window.cpp
Haze/src/Physics/: Physics.cpp
Modules/: FindFMOD.cmake  FindOpenAL.cmake
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
